# warehouse-api

./: .env  .env.prod  .gitignore  .gitmodules  README.rst  dockerfile  install_nix.sh  install_windows.ps1  pyproject.toml  requirements.txt
.github/workflows/: dockerhub.yml
docker/: .env  docker-compose.default.yml  docker-compose.dockerhub.yml  docker-compose.yml  dockerfile
home_warehouse_api/: dependencies.py  main.py  node.py  schema.py
home_warehouse_api/middlewares/: automatizations.py  permissions.py
home_warehouse_api/middlewares/integrations_apps/: evernote.py
home_warehouse_api/models/: account.py  automatization.py  automatizations.py  common.py  custom_column.py  custom_columns.py  default_product.py  location.py  product.py  product_price.py  raport.py  raports.py
home_warehouse_api/resolvers/: account.py  authentication.py  automatization.py  automatizations.py  custom_column.py  custom_columns.py  integration.py  integrations.py  location.py  node.py  product.py  products.py  products_filter.py  raport.py  raports.py
home_warehouse_api/services/: auth.py  generate_admin_account.py  generate_enum.py  hash_password.py  initial_setup.py
home_warehouse_api/services/integration_runners/: evernote.py  integration.py
home_warehouse_api/services/integrations/: evernote.py
home_warehouse_api/services/integrations_apps/: evernote.py
tests/: test_home_warehouse_api.py  test_ping.py
tests/graphql/: conftest.py  test_account.py  test_authentication.py  test_custom_column.py  test_location.py  test_product.py  test_raport.py
