[tool.poetry]
name = "home-warehouse-api"
version = "0.1.0"
description = ""
authors = ["Tafeen <taafeenn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = "^0.14.0"
graphene = "^2.1.8"
graphene-mongo = "^0.2.13"
bcrypt = "^3.2.0"
PyJWT = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.8.3"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
