[tool.poetry]
name = "home-warehouse-api"
version = "0.1.0"
description = ""
authors = ["Tafeen <taafeenn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = "^0.14.0"
graphene = "^2.1.8"
graphene-mongo = "^0.2.13"
bcrypt = "3.1.0"
PyJWT = "^2.1.0"
python-dotenv = "^0.17.1"
oauth2 = "^1.9.0"
evernote3 = {git = "https://github.com/evernote/evernote-sdk-python3.git"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.8.3"
autopep8 = "^1.5.7"
pylint-django = "^2.4.4"
pylint-mongoengine = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--disable-warnings -v"
testpaths = [
    "tests"
]